changed to mentor folder

--- a/mentor/mentor-home.html
+++ b/mentor/mentor-home.html
@@ -18,13 +18,13 @@
             </div>
             <div class="h-divider"></div>
             
-            <div class="link">
+            <div class="link home">
                 <img src="../icons/home.svg" alt="">
                 <a href="../pages/mentor-home.html" id="home">Home</a>
             </div>
             <div class="link">
                 <img src="../icons/resource.svg" alt="">
-                <a href="" id="project">Projects</a>
+                <a href="../mentor/mentor-projects.html" id="project">Projects</a>
             </div>
             <div class="link">
                 <img src="../icons/bell.svg" alt="">
@@ -62,17 +62,6 @@
                 <h2>Welcome, Mentor!</h2>
                 <p>Here are the latest updates from your students:</p>
             </div>
-            
-            <div class="search-bar">
-                <form action="" method="POST">
-                    <input type="search" placeholder="Search projects, users, or content..." name="search-projects" id="search-projects" required>
-                <button type="submit">
-                    <div class="search-button">
-                        <img src="../icons/search.svg" alt="" id="form-icon">
-                    </div>
-                </button>
-                </form>
-            </div>
 
             <div class="new-idea-submissions">
                 <h3>New Idea Submissions by Students</h3>
@@ -87,6 +76,7 @@
                         </div>
                         <button class="approve-button">Approve</button>
                         <button class="reject-button">Reject</button>
+                        <button class="feedback">Feedback</button>
                     </div>
                     <div class="idea-submission">
                         <h4>Student Name 1</h4>
@@ -96,6 +86,7 @@
                         </div>
                         <button class="approve-button">Approve</button>
                         <button class="reject-button">Reject</button>
+                        <button class="feedback">Feedback</button>
                     </div>
                 </div>
 
