--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="options">
                     <h2><a href="#about-us">About Us</a></h2>
-                    <button class="login-button"><a href="pages/login.php">Log In</a></button>
+                    <button class="login-button"><a href="pages/login.html">Log In</a></button>
                 </div>
 
                 <div class="menu">
@@ -44,14 +44,14 @@
             <section id="home-main">
                 <div class="option-menu-list" id="option-menu-list">
                     <a href="#about-us">About Us</a>
-                    <a href="pages/login.php">Log In</a>
+                    <a href="pages/login.html">Log In</a>
                 </div>
                 <div class="description">
                     <h2>CodeHive: Ignite, Innovate, Inspire.</h2>
                     <p>Empower your college journey with CodeHive. 
                         Upload your projects, propose fresh ideas, and contribute to
                          a valuable resource hub for the coding community.</p>
-                    <a href="pages/createAccount.php"><button id="button-get-started">Get Started</button></a>
+                    <a href="pages/createAccount.html"><button id="button-get-started">Get Started</button></a>
                 </div>
             </section>
            <section class="about-us" id="about-us">
