added search bar in home page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
             <div class="options">
                 <h2><a href="#about-us">About Us</a></h2>
+                <a href="pages/createAccount.php"><button id="button-get-started">Get Started</button></a>
                 <button class="login-button"><a href="pages/login.php">Log In</a></button>
             </div>
 
@@ -49,6 +50,7 @@
             <section id="home-main">
                 <div class="option-menu-list" id="option-menu-list">
                     <a href="#about-us">About Us</a>
+                    <a href="pages/createAccount.php"><button id="button-get-started">Get Started</button></a>
                     <a href="pages/login.php">Log In</a>
                 </div>
                 <div class="description">
@@ -56,8 +58,47 @@
                     <p>Empower your college journey with CodeHive.
                         Upload your projects, propose fresh ideas, and contribute to
                         a valuable resource hub for the coding community.</p>
-                    <a href="pages/createAccount.php"><button id="button-get-started">Get Started</button></a>
+                         
+                    <!-- <a href="pages/createAccount.php"><button id="button-get-started">Get Started</button></a> -->
                 </div>
+
+                <!-- search bar -->
+
+                <div class="search-form">
+                <div class="search-filter">
+                    <div class="search-bar">
+                        <form action="" method="POST">
+                            <input type="search" placeholder="Search for projects here" name="search-projects" id="search-projects" required>
+                            <button type="submit">
+                                <div class="search-button">
+                                    <img src="icons/search.svg" alt="" id="form-icon">
+                                </div>
+                            </button>
+                        </form>
+                    </div>
+                    <button class="filter" id="filter">
+                        <h3>Filter</h3>
+                        <img src="icons/filter.svg" alt="">
+                    </button>
+                </div>
+                <div class="filter-search" id="filter-search">
+                    <form action="" method="POST" id="filter-form" class="filter-search">
+                        <input type="radio" name="project-ugpg" id="ug" value="UG">
+                        <label for="ug">UG</label>
+
+                        <input type="radio" name="project-ugpg" id="pg" value="PG">
+                        <label for="pg">PG</label>
+
+                        <input type="radio" name="project-type" id="mini-project" value="Mini Project">
+                        <label for="mini-project">Mini Project</label>
+
+                        <input type="radio" name="project-type" id="main-project" value="Main Project">
+                        <label for="main-project">Main Project</label>
+
+                        <button type="submit">Apply</button>
+                    </form>
+                </div>
+            </div>
             </section>
             <section class="about-us" id="about-us">
                 <div class="content-in-about-us">
